# axum-todo

./: Cargo.toml
src/: lib.rs  main.rs  router.rs
src/middleware/: require_auth.rs
src/queries/: task_queries.rs  user_queries.rs
src/routes/tasks/: create_task.rs  create_task_extractor.rs  get_tasks.rs  mod.rs  update_tasks.rs
src/routes/users/: create_user.rs  login.rs  mod.rs
src/utilities/: app_error.rs  hash.rs  jwt.rs
