[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros", "headers"] }
bcrypt = "0.14.0"
chrono = "0.4.24"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
sea-orm = { version = "0.11.2", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = "2.3.2"
tokio = { version = "1.27.0", features = ["full", "rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
utoipa = { version = "3.0.3", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
validator = { version = "0.16.0", features = ["derive"] }
